--- a/part2/countries/package.json
+++ b/part2/countries/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phonebook",
+  "name": "countries",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 --watch db.json",
+    "api": "8dca5dc2c63b36ffb8fd77ac9a5b94e4"
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
